--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://oromeror.github.io/payments/",
   "name": "payments",
   "version": "0.0.0",
   "scripts": {
@@ -33,6 +34,7 @@
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/sha.js": "^2.4.0",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
