--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://oromeror.github.io/payments/home",
+  "homepage": "https://oromeror.github.io/payments/",
   "name": "payments",
   "version": "0.0.0",
   "scripts": {
@@ -35,6 +35,7 @@
     "@types/node": "^12.11.1",
     "@types/sha.js": "^2.4.0",
     "angular-cli-ghpages": "^1.0.0-rc.2",
+    "gh-pages": "^3.2.3",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
