--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-cc-library": "2.1.3",
+    "card-validator": "^8.1.1",
+    "credit-card-type": "^9.1.0",
     "md5-typescript": "^1.0.5",
+    "ngx-cc": "^0.0.2",
     "rxjs": "~6.6.0",
     "sha.js": "^2.4.11",
     "tslib": "^2.3.0",
