--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,15 @@
 # Only exists if Bazel was run
 /bazel-out
 
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 # dependencies
 /node_modules
 
